# qt-protobuf-editor

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
proto/: CMakeLists.txt  test.proto
protobuf_editor/: builtInTypeWidget.cpp  builtInTypeWidget.hpp  messageTypeWidget.cpp  messageTypeWidget.hpp  protobufEditor.cpp  protobufEditor.hpp  protobufFieldWidget.cpp  protobufFieldWidget.hpp
